--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Budgy_Prototype_v01"
         tools:targetApi="31">
         <activity
+            android:name=".loginPage"
+            android:exported="false">
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+    </activity>
+        <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
