--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".loginPage"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:exported="false">
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
     </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
